--- a/dockerfile/flask/dockerfile
+++ b/dockerfile/flask/dockerfile
@@ -8,7 +8,8 @@ RUN mkdir -p /home/web
 WORKDIR /home/web
 # 添加依赖
 COPY requirements.txt /home/web/requirements.txt
-RUN pip3 install -i https://pypi.douban.com/simple/ -r requirements.txt
+RUN pip3 config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
+RUN pip3 install -r requirements.txt
 
 # 使用gunicorn启动应用
 CMD gunicorn -w 4 -b 0.0.0.0:5000 run:app
